test/tests/InstanceMethodOnClass.expected
InstanceMethodOnClass.frost:13:11: error: cannot call instance method anonymous.InstanceMethodOnClass.m2() from a @class context
1 error
