test/tests/InstanceMethodOnClass.frost
class InstanceMethodOnClass {
    @class
    method m1() {
    }

    method m2() {
    }

    @class
    method main() {
        m1()
        InstanceMethodOnClass().m2()
        m2()
    }
}